--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 .letter-cube {
-	border: solid 1px black;
+	border: solid 1px #888888;
 	height: 30px;
 	width: 30px;
 	float: left;
 	margin: 5px;
 	text-align: center;
+	box-shadow: 1px 1px 1px #888888;
 }
