--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,12 @@
 	background-color: white;
 	border: solid 1px #888888;
 	border-radius: 5px;
+	
 }
-
+.letter:hover {
+	cursor: move;
+	box-shadow: 1px 1px 2px #808080 ;
+}
 .letter-box {
 	position: relative;
 	height: 46px;
