--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@
 	background-color: white;
 	border: solid 1px #888888;
 	border-radius: 5px;
+	-webkit-user-select: none;  /* Chrome all / Safari all */
+	-moz-user-select: none;     /* Firefox all */
+	-ms-user-select: none;      /* IE 10+ */
+	user-select: none;  
 	
 }
 .letter:hover {
@@ -26,6 +30,7 @@
 	margin: 4px;
 	text-align: center;
 	border-radius: 5px;
+	user-select: none;
 }
 
 #answer-container {
